[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqn-maze"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Jan Scholz", email = "jscholz.contact@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.3.1",
]

# [project.urls]
# Documentation = "https://github.com/"
# Issues = "https://github.com/"
# Source = "https://github.com/"

[tool.hatch.version]
path = "src/dqn_maze/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dqn_maze tests}"

[tool.coverage.run]
source_pkgs = ["dqn_maze", "tests"]
branch = true
parallel = true
omit = [
  "src/dqn_maze/__about__.py",
]

[tool.coverage.paths]
dqn_maze = ["src/dqn_maze", "*/dqn-maze/src/dqn_maze"]
tests = ["tests", "*/dqn-maze/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
